# zero2prod

./: .env.dev  .gitignore  Cargo.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: audit.yml  checks.yml
db_init/: create_app_user.sh
migrations/: 20250603180030_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
